Initial commit: LogIntel Demo project setup

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,11 +7,11 @@
     <meta name="theme-color" content="#2563eb" />
     <meta
       name="description"
-      content="LogWell - Natural language queries for banking system logs"
+      content="LogIntel - Banking Logs Intelligence Platform"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>LogWell</title>
+    <title>LogIntel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
